# autodesk-aps-mcp

./: .env.example  CHANGELOG.md  README.md  api_store.py  aps_auth.py  aps_live.py  config.py  main.py  pyproject.toml  server.py  testing.cs  testing.js
.cursor/: mcp.json  permissions.json
.cursor/agents/: autodesk-aps.md
.cursor/rules/: autodesk-aps-mcp-only.mdc
.github/workflows/: ci.yml
data/: acc.json  authentication.json  bim360.json  data-management.json  model-derivative.json
examples/: README.md  export-acc-sheets-pdf.js  list-acc-project-sheets.js
schemas/: endpoint.schema.json
scripts/: validate_data.py
tests/: test_live.py  test_store.py  test_validate.py
