[project]
name = "autodesk-aps-mcp"
version = "0.2.0"
description = "MCP server for Autodesk APS API reference, catalog resources, and read-only live API access"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=3.3.1",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
autodesk-aps-mcp = "server:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "server.py",
    "api_store.py",
    "aps_auth.py",
    "aps_live.py",
    "config.py",
]

[tool.hatch.build.targets.wheel.force-include]
"data" = "data"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv]
package = true
